# codepilot-agent

./: .env.example  .gitignore  README.md  main.py  migrate_to_subpackages.sh  pyproject.toml
scripts/: diagnose_tests.py  run_coder.py  run_explorer.py  run_loop.py  run_orchestrator.py  run_tui.py  run_verify.py  seed_playground.py  smoke_test.py
src/codepilot/: classifier.py  coder.py  config.py  diffing.py  github_client.py  guardrails.py  memory_episodic.py  memory_semantic.py  memory_working.py  orchestrator.py  orchestrator_loop.py  pipeline.py  pr_agent.py  repo_map.py  retrieval.py  skills.py  streaming.py  task.py  test_agent.py  tokens.py  tui.py  verify_loop.py  workspace.py
src/codepilot/agents/: coder.py  diffing.py  skills.py  test_agent.py  verify_loop.py
src/codepilot/core/: config.py  task.py
src/codepilot/explorer/: repo_map.py  retrieval.py  workspace.py
src/codepilot/github/: classifier.py  gates.py  github_client.py  pr_agent.py
src/codepilot/memory/: memory_episodic.py  memory_semantic.py  memory_working.py
src/codepilot/orchestration/: orchestrator.py  orchestrator_loop.py  pipeline.py
src/codepilot/ui/: tui.py
