[project]
name = "codepilot-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "deepagents>=0.6.12",
    "langchain-community>=0.4.2",
    "langchain[anthropic]>=1.3.14",
    "pygithub>=2.9.1",
    "python-dotenv>=1.2.2",
    "textual>=8.2.8",
    "tiktoken>=0.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codepilot"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
